--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-react",
+  "name": "zz-webpack-react",
   "version": "1.0.0",
   "description": "webpack打包工具React版",
   "main": "index.js",
