--- a/demo/package.json
+++ b/demo/package.json
@@ -23,7 +23,7 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "webpack-react": "^1.0.0"
+    "zz-webpack-react": "^1.0.0"
   },
   "engines": {
     "node": ">= 4.0.0",
