--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zz-webpack-react",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "webpack打包工具React版",
   "main": "index.js",
   "bin": {
@@ -36,7 +36,7 @@
     "chalk": "^2.3.1",
     "clean-webpack-plugin": "0.1.17",
     "copy-webpack-plugin": "4.3.1",
-    "cp-file": "^5.0.0",
+    "cpr": "^3.0.1",
     "cross-env": "5.1.3",
     "css-loader": "^0.28.7",
     "ejs": "^2.5.7",
