--- a/demo/package.json
+++ b/demo/package.json
@@ -5,11 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run dev",
-    "dev": "webpack-dev-server --inline --disable-host-check --public --config build/dev.js",
-    "build": "cross-env NODE_ENV=production node build/build.js",
-    "builduploadtest": "cross-env OFFLINE_ENV=test node build/build.js",
-    "proxy": "node proxy/index.js",
-    "flow": "flow"
+    "dev": "webpack-dev-server --inline --public --config build/dev.js",
+    "build": "node build/build.js"
   },
   "keywords": [
     "react"
@@ -23,7 +20,7 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
-    "zz-webpack-react": "^1.0.0"
+    "zz-webpack-react": "^1.0.8"
   },
   "engines": {
     "node": ">= 4.0.0",
