--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zz-webpack-react",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "description": "webpack打包工具React版",
   "main": "index.js",
   "bin": {
@@ -37,11 +37,10 @@
     "babel-preset-stage-2": "^6.24.1",
     "chalk": "^2.3.1",
     "clean-webpack-plugin": "0.1.17",
+    "copy-webpack-plugin": "4.3.1",
     "cpr": "^3.0.1",
-    "cross-env": "5.1.3",
     "css-loader": "^0.28.7",
-    "ejs": "^2.5.7",
-    "ejs-compiled-loader": "^1.1.0",
+    "ejs-compiled-loader": "^2.0.0",
     "es6-promise": "^4.1.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^12.0.0",
