--- a/demo/.babelrc
+++ b/demo/.babelrc
@@ -12,11 +12,6 @@
       }
     }],
     "react",
-    "stage-2",
-    "flow"
-  ],
-  "plugins": [
-    "transform-runtime",
-    "transform-object-assign"
+    "stage-2"
   ]
 }
