--- a/demo/package.json
+++ b/demo/package.json
@@ -17,10 +17,11 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "history": "^4.7.2",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "core-js": "^2.5.6"
   },
   "devDependencies": {
-    "zz-webpack-react": "^1.0.8"
+    "zz-webpack-react": "^1.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
