--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zz-webpack-react",
-  "version": "1.0.11",
+  "version": "1.1.0",
   "description": "webpack打包工具React版",
   "main": "index.js",
   "bin": {
@@ -21,64 +21,71 @@
   "homepage": "https://github.com/zhuanzhuanfe/zz-webpack-react/master#README",
   "author": "yuanxiaolong@zhuanzhuan.com",
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "assign-deep": "0.4.6",
     "async": "^2.6.0",
+    "assign-deep": "0.4.6",
     "babel-cli": "6.26.0",
-    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "chalk": "^2.3.1",
     "clean-webpack-plugin": "0.1.17",
     "copy-webpack-plugin": "4.3.1",
+    "cross-env": "5.1.3",
+    "css-loader": "^0.28.9",
     "cpr": "^3.0.1",
-    "css-loader": "^0.28.7",
-    "ejs-compiled-loader": "^2.0.0",
-    "es6-promise": "^4.1.1",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^12.0.0",
     "eslint-config-standard": "^6.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.0",
     "eslint-plugin-html": "^2.0.3",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-jsx-a11y": "^2.0.2",
     "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-react": "^6.3.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "^1.1.5",
     "flow-bin": "^0.61.0",
     "friendly-errors-webpack-plugin": "1.6.1",
-    "glob": "^7.1.2",
-    "html-webpack-inline-source-plugin": "0.0.9",
-    "html-webpack-plugin": "2.30.1",
-    "imagemin-webpack-plugin": "1.6.1",
+    "html-webpack-plugin": "^2.30.1",
     "inquirer": "^5.1.0",
-    "lodash": "^4.17.4",
     "node-notifier": "5.2.1",
-    "node-sass": "4.7.2",
-    "npm-root": "1.1.0",
-    "optimize-css-assets-webpack-plugin": "3.2.0",
-    "ora": "1.3.0",
-    "portfinder": "^1.0.13",
+    "npm-root": "^1.1.0",
+    "ora": "^1.3.0",
     "postcss-import": "^11.0.0",
+    "style-loader": "^0.19.0",
+    "vconsole-webpack-plugin": "^1.1.3",
+    "webpack": "^3.10.0",
+    "webpack-dashboard": "^1.1.1",
+    "webpack-dev-server": "^2.11.1",
+    "webpack-merge": "4.1.1",
+    "webpack-bundle-analyzer": "^2.11.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "css-loader": "^0.28.7",
+    "es6-promise": "^4.1.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "html-webpack-inline-source-plugin": "^0.0.9",
+    "lodash": "^4.17.4",
+    "node-sass": "4.7.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.0.8",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
-    "vconsole-webpack-plugin": "1.1.3",
-    "webpack": "3.10.0",
-    "webpack-dashboard": "1.1.1",
-    "webpack-dev-server": "2.11.1",
-    "webpack-merge": "4.1.1"
+    "portfinder": "^1.0.13",
+    "ejs-compiled-loader": "^2.2.0",
+    "glob":"^7.1.2",
+    "tslint": "^5.9.1",
+    "tslint-loader": "^3.5.3",
+    "tslint-react": "^3.5.1",
+    "typescript": "^2.7.2",
+    "awesome-typescript-loader": "^4.0.1",
+    "cssnano-preset-advanced": "^4.0.0-rc.2"
   },
   "license": "ISC"
 }
